--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/provolot/messybot#readme",
   "dependencies": {
     "botkit": "^0.6.7",
+    "dmx": "0.0.5",
     "isy-js": "^0.4.5",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
