--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/provolot/messybot#readme",
   "dependencies": {
+    "arpscan": "^0.6.0",
     "axios": "^0.18.0",
     "botkit": "^0.6.7",
     "dmx": "0.0.5",
