--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "isy-js": "^0.4.5",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "node-cmd": "^3.0.0",
     "request": "^2.83.0",
     "xml2js": "^0.4.19"
   }
