--- a/app/config/config.js.example
+++ b/app/config/config.js.example
@@ -27,5 +27,8 @@ config.ambientweather.appkey = "appkeyappkeyappkey";
 config.ambientweather.apikey = "apikeyapikeyapikey";
 config.ambientweather.mac = "00:00:00:00:00:00";
 
+config.coolmasternet = {};
+config.coolmasternet.ip = "192.168.1.xxx";
+
 module.exports = config;
 
