--- a/app/config/config.js.example
+++ b/app/config/config.js.example
@@ -22,5 +22,7 @@ config.dmx.addr = "123.123.123.123"
 config.webserver = {};
 config.webserver.port = 3000;
 
+config.openzwave.tty = "/dev/ttyUSB0"
+
 module.exports = config;
 
