--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "node-cmd": "^3.0.0",
+    "openzwave-shared": "^1.4.1",
     "request": "^2.83.0",
     "xml2js": "^0.4.19"
   }
