--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^0.18.0",
     "beepbeep": "^1.2.2",
     "botkit": "^0.6.7",
-    "dmx": "0.0.5",
+    "dmx": "^0.1.1",
     "isy-js": "^0.4.5",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
