--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-cmd": "^3.0.0",
     "node-omxplayer": "^0.6.1",
     "openzwave-shared": "^1.4.1",
+    "particle-api-js": "^7.2.3",
     "request": "^2.83.0",
     "telnet-client": "^0.15.5",
     "xml2js": "^0.4.19",
